--- a/BhartiyaTempleApp/res/layout/activity_splash_screen.xml
+++ b/BhartiyaTempleApp/res/layout/activity_splash_screen.xml
@@ -11,7 +11,8 @@
       <ImageView android:src="@drawable/temple"
          android:id="@+id/imgview_temple_splashscreen"
          android:layout_width="fill_parent"
-         android:layout_height="fill_parent">
+         android:layout_height="fill_parent"
+         android:contentDescription="@string/strSplashScreenDesc">
       </ImageView>
 
 </RelativeLayout>
