Database stuff and Changes to UI

--- a/BhartiyaTempleApp/res/layout/activity_update_database_delegate.xml
+++ b/BhartiyaTempleApp/res/layout/activity_update_database_delegate.xml
@@ -71,4 +71,13 @@
         android:ems="10"
         android:text="repeat description"  />
 
+    <Button
+        android:id="@+id/button1"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="Submit" />
+
 </RelativeLayout>
